# mimic_user_agent

./: .gitignore  README.md  pyproject.toml
src/: randomUserAgent.py
tests/: test_mimicUserAgent.py  test_randomUserAgent.py
