[tool.poetry]
name = "mimic-user-agent"
version = "0.1.1"
description = "Simple user-agent generator."
authors = ["kurotom <55354389+kurotom@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "mimic_user_agent"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
